[tool.poetry]
name = "geoloc-tools"
version = "0.1.0"
description = ""
authors = ["Brian Holderman"]
readme = "README.md"
packages = [{include = "geoloc_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
