[tool.poetry]
name = "nmdc-geoloc-tools"
version = "0.0.0"
description = ""
authors = ["Brian Holderman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
