[project]
name = "nmdc-geoloc-tools"
dynamic = ["version"]
description = "NMDC library to request geolocation information including elevation, soil type, and landuse"
authors = [
    {name = "Brian Holderman"},
    {name = "Patrick Kalita", email = "pkalita@lbl.gov"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.2",
    "ruff>=0.6.8",
    "pytest-mock>=3.14.0",
    "requests-mock>=1.11.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
